test/error/unwrapped-cant-be-mutable.dsk
let S = struct
    x: int
let f = (x: ?S) -> void
    if x: mut y
        echo(y.x)
